# trp1-automation-auditor

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
audit/report_bypeer_received/: audit_report.md
audit/report_onpeer_generated/: audit_report.md
audit/report_onself_generated/: audit_report.md
rubric/: rubric.json
src/: graph.py  llm.py  repo_tools.py  report_generator.py  state.py
src/nodes/: detectives.py  judges.py  justice.py
src/tools/: doc_tools.py  repo_tools.py
