[project]
name = "trp1-automation-auditor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.3.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-google-genai>=0.1.0",
    "langgraph>=1.0.9",
    "langsmith>=0.7.6",
    "pdfplumber>=0.11.9",
    "pydantic>=2.12.5",
    "pypdf>=6.7.3",
    "python-dotenv>=1.2.1",
    "typing-extensions>=4.15.0",
    "langchain-groq>=1.1.2",
]
